DataGenerator optimized for Parallel execution

--- a/DocuTest.Api/appsettings.json
+++ b/DocuTest.Api/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=DocuTest;Trusted_Connection=True;MultipleActiveResultSets=true;"
-  }
+  },
+  "GenerateData": true
 }
