Services implemented and Repository Interfaces added

--- a/DocuTest.Application/DocuTest.Application.csproj
+++ b/DocuTest.Application/DocuTest.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DocuTest.Data.Main.DAL\DocuTest.Data.Main.DAL.csproj" />
     <ProjectReference Include="..\DocuTest.Shared\DocuTest.Shared.csproj" />
   </ItemGroup>
 
