--- a/DocuTest.Data.Main.DAL/DocuTest.Data.Main.DAL.csproj
+++ b/DocuTest.Data.Main.DAL/DocuTest.Data.Main.DAL.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DocuTest.Shared\DocuTest.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
