Testing, fine touches and design decisions documented

--- a/DocuTest.Api/appsettings.json
+++ b/DocuTest.Api/appsettings.json
@@ -9,5 +9,5 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=DocuTest;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
-  "GenerateData": true
+  "GenerateData": false
 }
